# marketplace

./: .env.example  .gitignore  docker-compose.yaml  nginx.conf
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/routers/: __init__.py  auth.py  reviews.py  secure_tokens.py  users.py  verification_codes.py
backend/src/core/: config.py  constants.py  create_app.py  exceptions.py  handlers.py  logging.py  rate_limiter.py
backend/src/core/clients/: s3_client.py
backend/src/core/databases/: redis.py  sql.py
backend/src/core/decorators/: auth.py
backend/src/core/factories/: listings.py  rate_limiter.py  reviews.py  users.py  verification_codes.py
backend/src/core/managers/: chats.py
backend/src/core/middlewares/: __init__.py  auth.py  logging.py
backend/src/core/security/: config.py
backend/src/core/types/: base.py  verification_codes.py
backend/src/migrations/: env.py
backend/src/models/: __init__.py  base.py  chats.py  listings.py  reviews.py  users.py  verification_codes.py
backend/src/repositories/: chats.py  crud.py  listings.py  reviews.py  users.py  verification_codes.py
backend/src/schemas/: auth.py  base.py  chats.py  listings.py  redirect_tokens.py  reviews.py  users.py  verification_codes.py
backend/src/services/: auth.py  reviews.py  users.py  verification_codes.py
backend/src/tests/: conftest.py
backend/src/utils/: auth.py  caching.py  emails.py  files.py  listings.py  reviews.py  text.py  users.py  verification_codes.py
(+191 files in other folders)
